--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -21,8 +21,7 @@
                     class="icon-bar"></span> <span class="icon-bar"></span> <span
                     class="icon-bar"></span>
             </button>
-            <div class="navbar-brand">Registration and
-                Login Module</div>
+            <div class="navbar-brand">Pay My Buddy</div>
         </div>
     </div>
 </nav>
