--- a/src/main/resources/templates/transaction-history.html
+++ b/src/main/resources/templates/transaction-history.html
@@ -23,6 +23,13 @@
             </button>
             <a class="navbar-brand" href="#" th:href="@{/}">Pay My Buddy</a>
         </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/transaction}">Send Money</a></li>
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/fundAccount}">Fund my account</a></li>
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>
+            </ul>
+        </div>
     </div>
 </nav>
 
@@ -40,37 +47,24 @@
             </div>
         </div>
     </div>
-    <div class="py-2">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 bg-success">
-                    <h6 class="text-center">Sender<br></h6>
-                </div>
-                <div class="col-md-3 bg-success">
-                    <h6 class="text-center">Receiver<br></h6>
-                </div>
-                <div class="col-md-3 bg-success">
-                    <h6 class="text-center bg-success">Description</h6>
-                </div>
-                <div class="col-md-3 bg-success">
-                    <h6 class="text-center">Amount<br></h6>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="">
-        <div class="container">
-            <div class="row" data-th-each="transaction : ${ transactions }">
-                <br>
-                <div class="col-md-3 text-center" data-th-text="${ transaction.senderEmail}"></div>
-                <div class="col-md-3 text-center" data-th-text="${ transaction.receiverEmail}"></div>
-                <div class="col-md-3 text-center" data-th-text="${ transaction.description }"></div>
-                <div class="col-md-3 text-center"
-                     data-th-text="${#numbers.formatDecimal(transaction.amount,2,2) + ' ' + transaction.currencyCode}"></div>
-            </div>
-        </div>
-    </div>
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th scope="col">Sender email</th>
+            <th scope="col">Receiver email</th>
+            <th scope="col">Description</th>
+            <th scope="col">Transaction amount</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr data-th-each="transaction : ${ transactions }">
+            <td data-th-text="${ transaction.senderEmail }"></td>
+            <td data-th-text="${ transaction.receiverEmail }"></td>
+            <td data-th-text="${ transaction.description }"></td>
+            <td data-th-text="${#numbers.formatDecimal(transaction.amount,2,2) + ' ' + transaction.currencyCode}"></td>
+        </tr>
+        </tbody>
+    </table>
     <br>
 
 </div>
