--- a/src/main/resources/templates/credit-card-form.html
+++ b/src/main/resources/templates/credit-card-form.html
@@ -23,6 +23,13 @@
             </button>
             <a class="navbar-brand" href="#" th:href="@{/}">Pay My Buddy</a>
         </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/transaction}">Send Money</a></li>
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/fundAccount}">Fund my account</a></li>
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>
+            </ul>
+        </div>
     </div>
 </nav>
 
