--- a/src/main/resources/templates/credit-cards.html
+++ b/src/main/resources/templates/credit-cards.html
@@ -25,6 +25,13 @@
             </button>
             <a class="navbar-brand" href="#" th:href="@{/}">Pay My Buddy</a>
         </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/transaction}">Send Money</a></li>
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/fundAccount}">Fund my account</a></li>
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>
+            </ul>
+        </div>
     </div>
 </nav>
 
@@ -69,9 +76,9 @@
 
             <br>
             <div class="form-group">
-                <span>Add a new credit card ? <a th:href="@{/addCreditCard}">Click here</a></span><br>
+                <span>Add a new credit card ? <a th:href="@{/addCreditCard}">Click here</a></span><br><br>
                 <span>Fund your Pay My Buddy account with one of your credit cards ? <a
-                        th:href="@{/creditCardTransaction}">Click here</a></span><br>
+                        th:href="@{/creditCardTransaction}">Click here</a></span><br><br>
                 <span><a href="/" th:href="@{/creditCardTransactions}">Credit card transactions history</a></span>
             </div>
         </div>
