--- a/src/main/resources/templates/bank-accounts.html
+++ b/src/main/resources/templates/bank-accounts.html
@@ -37,9 +37,9 @@
 
 <br>
 <br>
-<div class = "container">
-    <div class = "row">
-        <div class = "col-md-6 col-md-offset-3">
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
 
             <div class="py-3">
                 <div class="container">
@@ -51,32 +51,30 @@
                 </div>
             </div>
             <tr th:if="${bankAccounts.isEmpty()}">
-                <td class="text-center" colspan="3">You don't have any bank account linked to your Pay My Buddy
+                <div class="alert alert-info">You don't have any bank account linked to your Pay My Buddy
                     account.
-                </td>
+                </div>
             </tr>
-            <div class="py-2">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-3 bg-success">
-                            <h4 class="text-center">Iban<br></h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
-            <div class="">
-                <div class="container">
-                    <div class="row" data-th-each="bankAccount : ${ bankAccounts }">
-                        <div class="col-md-3 text-center" data-th-text="${ bankAccount.iban }"></div><br><br>
-                    </div>
-                </div>
-            </div>
+                <table class="table table-striped" th:if="${!bankAccounts.isEmpty()}">
+                    <thead>
+                    <tr>
+                        <th scope="col">Account iban</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr data-th-each="account : ${ bankAccounts }">
+                        <td data-th-text="${ account.iban }"></td>
+                    </tr>
+                    </tbody>
+                </table>
+
 
             <br>
             <div class="form-group">
                 <span>Add a new bank account ? <a th:href="@{/addBankAccount}">Click here</a></span><br><br>
-                <span>Fund your Pay My Buddy account using one of your bank accounts ? <a th:href="@{/bankAccountTransaction}">Click here</a> </span><br><br>
+                <span>Fund your Pay My Buddy account using one of your bank accounts ? <a
+                        th:href="@{/bankAccountTransaction}">Click here</a> </span><br><br>
                 <span><a href="/" th:href="@{/bankAccountTransactions}">Bank account transactions history</a></span>
             </div>
         </div>
