--- a/src/main/resources/templates/contact-list.html
+++ b/src/main/resources/templates/contact-list.html
@@ -57,7 +57,7 @@
 
             <br><br>
 
-            <table class="table table-striped">
+            <table class="table table-striped" th:if="${!contactList.isEmpty()}">
                 <thead>
                 <tr>
                     <th scope="col">Contact email</th>
