ajouts contacts dans barre de navigation et menu déroulant pour envoyer de l'argent à un contact

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,20 +23,26 @@
                     class="icon-bar"></span> <span class="icon-bar"></span> <span
                     class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#" th:href="@{/}">Pay My Buddy</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li sec:authorize="isAuthenticated()"><a th:href="@{/transaction}">Send Money</a></li>
-                <li sec:authorize="isAuthenticated()"><a th:href="@{/fundAccount}">Fund my account</a></li>
-                <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>
+                <li sec:authorize="isAuthenticated()"><a class="navbar-brand" th:href="@{/}">Home</a></li>
+                <li sec:authorize="isAuthenticated()"><a class="navbar-brand" th:href="@{/transaction}">Send Money</a></li>
+                <li sec:authorize="isAuthenticated()"><a class="navbar-brand" th:href="@{/fundAccount}">Fund my account</a></li>
+                <li sec:authorize="isAuthenticated()"><a class="navbar-brand" th:href="@{/contacts}">Contacts</a></li>
+                <li sec:authorize="isAuthenticated()"><a class="navbar-brand" th:href="@{/logout}">Logout</a></li>
             </ul>
         </div>
     </div>
 </nav>
 
-<br>
-<br>
+<br><br><br>
+
+<div class='col-xs-3'>
+    <button type="button" class="btn btn-success">
+        <h3>
+            Pay My Buddy
+        </h3>
+    </button>
+</div>
 
 <div class="container">
     <div class="row">
@@ -62,32 +68,32 @@
                 <ul>
                     <div class="form-group">
                         <li>
-                            <button><a th:href="@{/contacts}">My contacts</a></button>
+                            <button class="btn btn-light"><a th:href="@{/contacts}">My contacts</a></button>
                         </li>
                     </div>
                     <div class="form-group">
                         <li>
-                            <button><a th:href="@{/transaction}">Send money to a friend</a></button>
+                            <button class="btn btn-light"><a th:href="@{/transaction}">Send money to a friend</a></button>
                         </li>
                     </div>
                     <div class="form-group">
                         <li>
-                            <button><a th:href="@{/fundAccount}">Fund your Pay My Buddy account</a></button>
+                            <button class="btn btn-light"><a th:href="@{/fundAccount}">Fund your Pay My Buddy account</a></button>
                         </li>
                     </div>
                     <div class="form-group">
                         <li>
-                            <button><a th:href="@{/transactions}">My transactions</a></button>
+                            <button class="btn btn-light"><a th:href="@{/transactions}">My transactions</a></button>
                         </li>
                     </div>
                     <div class="form-group">
                         <li>
-                            <button><a th:href="@{/bankAccounts}">My bank accounts</a></button>
+                            <button class="btn btn-light"><a th:href="@{/bankAccounts}">My bank accounts</a></button>
                         </li>
                     </div>
                     <div class="form-group">
                         <li>
-                            <button><a th:href="@{/creditCards}">My credit cards</a></button>
+                            <button class="btn btn-light"><a th:href="@{/creditCards}">My credit cards</a></button>
                         </li>
                     </div>
                 </ul>
