--- a/src/main/resources/templates/bank-account-transactions-history.html
+++ b/src/main/resources/templates/bank-account-transactions-history.html
@@ -23,20 +23,27 @@
                     class="icon-bar"></span> <span class="icon-bar"></span> <span
                     class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#" th:href="@{/}">Pay My Buddy</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li sec:authorize="isAuthenticated()"><a th:href="@{/transaction}">Send Money</a></li>
-                <li sec:authorize="isAuthenticated()"><a th:href="@{/fundAccount}">Fund my account</a></li>
-                <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>
+                <li sec:authorize="isAuthenticated()"><a class="navbar-brand" th:href="@{/}">Home</a></li>
+                <li sec:authorize="isAuthenticated()"><a class="navbar-brand" th:href="@{/transaction}">Send Money</a></li>
+                <li sec:authorize="isAuthenticated()"><a class="navbar-brand" th:href="@{/fundAccount}">Fund my account</a></li>
+                <li sec:authorize="isAuthenticated()"><a class="navbar-brand" th:href="@{/contacts}">Contacts</a></li>
+                <li sec:authorize="isAuthenticated()"><a class="navbar-brand" th:href="@{/logout}">Logout</a></li>
             </ul>
         </div>
     </div>
 </nav>
 
-<br>
-<br>
+<br><br><br>
+
+<div class='col-xs-3'>
+    <button type="button" class="btn btn-success">
+        <h3>
+            Pay My Buddy
+        </h3>
+    </button>
+</div>
+
 <div class = "container">
     <div class = "row">
         <div class = "col-md-6 col-md-offset-3">
@@ -68,6 +75,8 @@
                 <tr data-th-each="transaction : ${ bankAccountTransactions }">
                     <td data-th-text="${ transaction.iban }"></td>
                     <td data-th-text="${#numbers.formatDecimal(transaction.amount,2,2) + ' ' + transaction.currencyCode}"></td>
+                    <td th:if="${transaction.toBalance}">From bank account to Pay My Buddy account.</td>
+                    <td th:if="${!transaction.toBalance}">From Pay My Buddy account to bank account.</td>
                 </tr>
                 </tbody>
             </table>
